--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "axios": "^0.21",
+        "bootstrap": "^5.0.2",
+        "css-loader": "^5.2.7",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0.25",
+        "lodash": "^4.17.21",
+        "popper.js": "^1.12",
+        "postcss": "^8.3.5",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.35.2",
+        "sass-loader": "^12.1.0",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.6",
+        "vue-router": "^3.5.2",
+        "vue-template-compiler": "^2.6.14"
+    },
+    "dependencies": {
+        "watch": "^1.0.2"
     }
 }
